@@ -18,3 +18,6 @@ Sphinx image handling
 
 .. a non-local image URI
 .. image:: http://www.python.org/logo.png
+
+.. an image with subdir and unspecified extension
+.. image:: subdir/simg.*
