@@ -54,16 +54,19 @@ def test_images():
     htmlbuilder = StandaloneHTMLBuilder(app, env)
     htmlbuilder.post_process_images(tree)
     assert "no matching candidate for image URI u'foo.*'" in app._warning.content[-1]
-    assert set(htmlbuilder.images.keys()) == set(['subdir/img.png', 'img.png'])
-    assert set(htmlbuilder.images.values()) == set(['img.png', 'img1.png'])
+    assert set(htmlbuilder.images.keys()) == set(['subdir/img.png', 'img.png',
+                                                  'subdir/simg.png'])
+    assert set(htmlbuilder.images.values()) == set(['img.png', 'img1.png',
+                                                    'simg.png'])
 
     app._warning.reset()
     latexbuilder = LaTeXBuilder(app, env)
     latexbuilder.post_process_images(tree)
     assert "no matching candidate for image URI u'foo.*'" in app._warning.content[-1]
-    assert set(latexbuilder.images.keys()) == set(['subdir/img.png',
+    assert set(latexbuilder.images.keys()) == set(['subdir/img.png', 'subdir/simg.png',
                                                    'img.png', 'img.pdf'])
-    assert set(latexbuilder.images.values()) == set(['img.pdf', 'img.png', 'img1.png'])
+    assert set(latexbuilder.images.values()) == set(['img.pdf', 'img.png',
+                                                     'img1.png', 'simg.pdf'])
 
 def test_second_update():
     # delete, add and "edit" (change saved mtime) some files and update again
